--- a/genindex.html
+++ b/genindex.html
@@ -496,6 +496,8 @@
 </li>
         <li><a href="engine/core/ui.html#scripts.engine.core.ui.UI.__init__">(UI method)</a>, <a href="scripts.engine.core.html#scripts.engine.core.ui.UI.__init__">[1]</a>
 </li>
+        <li><a href="scripts.engine.internal.html#scripts.engine.internal.event.UseSkillEvent.__init__">(UseSkillEvent method)</a>
+</li>
         <li><a href="scripts.engine.internal.html#scripts.engine.internal.definition.VideoConfigData.__init__">(VideoConfigData method)</a>
 </li>
         <li><a href="engine/world_objects/lighting.html#scripts.engine.world_objects.lighting.Wall.__init__">(Wall method)</a>, <a href="scripts.engine.world_objects.html#scripts.engine.world_objects.lighting.Wall.__init__">[1]</a>
@@ -661,10 +663,10 @@
         <li><a href="scripts.engine.internal.html#scripts.engine.internal.constant.InteractionEventType.AFFECT_STAT">(InteractionEventType attribute)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="tests.engine.html#tests.engine.test_effect.affect_terrain_amount">affect_terrain_amount() (in module tests.engine.test_effect)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="tests.engine.html#tests.engine.test_effect.affect_terrain_negative_amount">affect_terrain_negative_amount() (in module tests.engine.test_effect)</a>
 </li>
       <li><a href="scripts.engine.core.html#scripts.engine.core.effect.AffectCooldownEffect">AffectCooldownEffect (class in scripts.engine.core.effect)</a>
@@ -738,6 +740,8 @@
       <li><a href="scripts.engine.internal.html#scripts.engine.internal.constant.TravelMethod.ARC">ARC (TravelMethod attribute)</a>
 </li>
       <li><a href="scripts.engine.internal.html#scripts.engine.internal.constant.DamageType.ASTRAL">ASTRAL (DamageType attribute)</a>
+</li>
+      <li><a href="scripts.engine.internal.html#scripts.engine.internal.constant.SpriteCategory.ATTACK">ATTACK (SpriteCategory attribute)</a>
 </li>
       <li><a href="scripts.engine.internal.html#scripts.engine.internal.definition.TraitSpritePathsData.attack">attack (TraitSpritePathsData attribute)</a>
 
@@ -1037,6 +1041,8 @@
 </li>
       <li><a href="engine/internal/constant.html#scripts.engine.internal.constant.DamageType">DamageType (class in scripts.engine.internal.constant)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.constant.DamageType">[1]</a>
 </li>
+      <li><a href="scripts.engine.internal.html#scripts.engine.internal.constant.SpriteCategory.DEAD">DEAD (SpriteCategory attribute)</a>
+</li>
       <li><a href="scripts.engine.internal.html#scripts.engine.internal.definition.TraitSpritePathsData.dead">dead (TraitSpritePathsData attribute)</a>
 
       <ul>
@@ -1141,6 +1147,8 @@
       </ul></li>
       <li><a href="scripts.engine.internal.html#scripts.engine.internal.extend_json.deserialise_dataclasses">deserialise_dataclasses() (in module scripts.engine.internal.extend_json)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="scripts.engine.core.html#scripts.engine.core.component.Aesthetic.deserialize">deserialize() (Aesthetic class method)</a>
 
       <ul>
@@ -1189,8 +1197,6 @@
         <li><a href="scripts.engine.core.html#scripts.engine.core.component.WinCondition.deserialize">(WinCondition class method)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="scripts.engine.core.html#scripts.engine.core.dungen.RoomConcept.design">design (RoomConcept attribute)</a>
 
       <ul>
@@ -1507,12 +1513,6 @@
 </li>
       <li><a href="engine/core/world.html#scripts.engine.core.world.get_affected_entities">get_affected_entities() (in module scripts.engine.core.world)</a>, <a href="scripts.engine.core.html#scripts.engine.core.world.get_affected_entities">[1]</a>
 </li>
-      <li><a href="nqp/actions/skill.html#scripts.nqp.actions.skill.Move.get_animation">get_animation() (Move method)</a>, <a href="scripts.nqp.actions.html#scripts.nqp.actions.skill.Move.get_animation">[1]</a>
-
-      <ul>
-        <li><a href="engine/internal/action.html#scripts.engine.internal.action.Skill.get_animation">(Skill method)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.action.Skill.get_animation">[1]</a>
-</li>
-      </ul></li>
       <li><a href="engine/core/world.html#scripts.engine.core.world.get_cast_positions">get_cast_positions() (in module scripts.engine.core.world)</a>, <a href="scripts.engine.core.html#scripts.engine.core.world.get_cast_positions">[1]</a>
 </li>
       <li><a href="engine/core/world.html#scripts.engine.core.world.get_chebyshev_distance">get_chebyshev_distance() (in module scripts.engine.core.world)</a>, <a href="scripts.engine.core.html#scripts.engine.core.world.get_chebyshev_distance">[1]</a>
@@ -1539,10 +1539,10 @@
 </li>
       <li><a href="engine/core/world.html#scripts.engine.core.world.get_euclidean_distance">get_euclidean_distance() (in module scripts.engine.core.world)</a>, <a href="scripts.engine.core.html#scripts.engine.core.world.get_euclidean_distance">[1]</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="engine/core/world.html#scripts.engine.core.world.get_game_map">get_game_map() (in module scripts.engine.core.world)</a>, <a href="scripts.engine.core.html#scripts.engine.core.world.get_game_map">[1]</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="engine/core/ui.html#scripts.engine.core.ui.UI.get_gui_manager">get_gui_manager() (UI method)</a>, <a href="scripts.engine.core.html#scripts.engine.core.ui.UI.get_gui_manager">[1]</a>
 </li>
       <li><a href="engine/core/world.html#scripts.engine.core.world.get_hit_type">get_hit_type() (in module scripts.engine.core.world)</a>, <a href="scripts.engine.core.html#scripts.engine.core.world.get_hit_type">[1]</a>
@@ -1642,10 +1642,12 @@
       <li><a href="scripts.engine.internal.html#scripts.engine.internal.constant.HitType.HIT">HIT (HitType attribute)</a>
 </li>
       <li><a href="scripts.engine.internal.html#scripts.engine.internal.definition.HitTypeData.hit">hit (HitTypeData attribute)</a>
+</li>
+      <li><a href="scripts.engine.internal.html#scripts.engine.internal.constant.SpriteCategory.HIT">HIT (SpriteCategory attribute)</a>
+</li>
+      <li><a href="scripts.engine.internal.html#scripts.engine.internal.definition.TraitSpritePathsData.hit">hit (TraitSpritePathsData attribute)</a>
 
       <ul>
-        <li><a href="scripts.engine.internal.html#scripts.engine.internal.definition.TraitSpritePathsData.hit">(TraitSpritePathsData attribute)</a>
-</li>
         <li><a href="scripts.engine.internal.html#scripts.engine.internal.definition.TraitSpritesData.hit">(TraitSpritesData attribute)</a>
 </li>
       </ul></li>
@@ -1665,6 +1667,8 @@
 <h2 id="I">I</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="scripts.engine.internal.html#scripts.engine.internal.constant.SpriteCategory.ICON">ICON (SpriteCategory attribute)</a>
+</li>
       <li><a href="scripts.engine.internal.html#scripts.engine.internal.definition.TraitSpritePathsData.icon">icon (TraitSpritePathsData attribute)</a>
 
       <ul>
@@ -1709,6 +1713,8 @@
         <li><a href="scripts.nqp.actions.html#scripts.nqp.actions.affliction.Flaming.identity_tags">(Flaming attribute)</a>
 </li>
       </ul></li>
+      <li><a href="scripts.engine.internal.html#scripts.engine.internal.constant.SpriteCategory.IDLE">IDLE (SpriteCategory attribute)</a>
+</li>
       <li><a href="scripts.engine.internal.html#scripts.engine.internal.definition.TraitSpritePathsData.idle">idle (TraitSpritePathsData attribute)</a>
 
       <ul>
@@ -1733,10 +1739,10 @@
 </li>
       <li><a href="nqp/general/command.html#scripts.nqp.command.init_subscribers">init_subscribers() (in module scripts.nqp.command)</a>, <a href="scripts.nqp.html#scripts.nqp.command.init_subscribers">[1]</a>
 </li>
-      <li><a href="engine/core/state.html#scripts.engine.core.state.initialise_engine">initialise_engine() (in module scripts.engine.core.state)</a>, <a href="scripts.engine.core.html#scripts.engine.core.state.initialise_engine">[1]</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="engine/core/state.html#scripts.engine.core.state.initialise_engine">initialise_engine() (in module scripts.engine.core.state)</a>, <a href="scripts.engine.core.html#scripts.engine.core.state.initialise_engine">[1]</a>
+</li>
       <li><a href="nqp/general/command.html#scripts.nqp.command.initialise_game">initialise_game() (in module scripts.nqp.command)</a>, <a href="scripts.nqp.html#scripts.nqp.command.initialise_game">[1]</a>
 </li>
       <li><a href="engine/internal/debug.html#scripts.engine.internal.debug.initialise_logging">initialise_logging() (in module scripts.engine.internal.debug)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.debug.initialise_logging">[1]</a>
@@ -2106,6 +2112,8 @@
         <li><a href="scripts.engine.internal.html#scripts.engine.internal.constant.InteractionEventType.MOVE">(InteractionEventType attribute)</a>
 </li>
         <li><a href="scripts.engine.internal.html#scripts.engine.internal.constant.ReactionTrigger.MOVE">(ReactionTrigger attribute)</a>
+</li>
+        <li><a href="scripts.engine.internal.html#scripts.engine.internal.constant.SpriteCategory.MOVE">(SpriteCategory attribute)</a>
 </li>
       </ul></li>
       <li><a href="scripts.engine.internal.html#scripts.engine.internal.definition.TraitSpritePathsData.move">move (TraitSpritePathsData attribute)</a>
@@ -3003,6 +3011,10 @@
 </li>
       <li><a href="engine/world_objects/lighting.html#scripts.engine.world_objects.lighting.Light.set_colour">set_colour() (Light method)</a>, <a href="scripts.engine.world_objects.html#scripts.engine.world_objects.lighting.Light.set_colour">[1]</a>
 </li>
+      <li><a href="scripts.engine.core.html#scripts.engine.core.component.Aesthetic.set_current_sprite">set_current_sprite() (Aesthetic method)</a>
+</li>
+      <li><a href="scripts.engine.core.html#scripts.engine.core.component.Aesthetic.set_draw_to_target">set_draw_to_target() (Aesthetic method)</a>
+</li>
       <li><a href="engine/core/ui.html#scripts.engine.core.ui.UI.set_element_visibility">set_element_visibility() (UI method)</a>, <a href="scripts.engine.core.html#scripts.engine.core.ui.UI.set_element_visibility">[1]</a>
 </li>
       <li><a href="nqp/elements/actor_info.html#scripts.nqp.ui_elements.actor_info.ActorInfo.set_entity">set_entity() (ActorInfo method)</a>, <a href="scripts.nqp.ui_elements.html#scripts.nqp.ui_elements.actor_info.ActorInfo.set_entity">[1]</a>
@@ -3169,6 +3181,8 @@
         <li><a href="scripts.engine.internal.html#scripts.engine.internal.definition.TraitData.sprite_paths">(TraitData attribute)</a>
 </li>
       </ul></li>
+      <li><a href="engine/internal/constant.html#scripts.engine.internal.constant.SpriteCategory">SpriteCategory (class in scripts.engine.internal.constant)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.constant.SpriteCategory">[1]</a>
+</li>
       <li><a href="scripts.engine.internal.html#scripts.engine.internal.constant.Shape.SQUARE">SQUARE (Shape attribute)</a>
 </li>
       <li><a href="scripts.engine.internal.html#scripts.engine.internal.constant.Resource.STAMINA">STAMINA (Resource attribute)</a>
@@ -3609,6 +3623,8 @@
         <li><a href="scripts.nqp.actions.html#scripts.nqp.actions.skill.TarAndFeather.uses_projectile">(TarAndFeather attribute)</a>
 </li>
       </ul></li>
+      <li><a href="scripts.engine.internal.html#scripts.engine.internal.event.UseSkillEvent">UseSkillEvent (class in scripts.engine.internal.event)</a>
+</li>
   </ul></td>
 </tr></table>
 
