--- a/_modules/scripts/engine/core/system.html
+++ b/_modules/scripts/engine/core/system.html
@@ -255,6 +255,7 @@
 <span></span><span class="kn">from</span> <span class="nn">__future__</span> <span class="kn">import</span> <span class="n">annotations</span>
 
 <span class="kn">import</span> <span class="nn">logging</span>
+<span class="kn">from</span> <span class="nn">typing</span> <span class="kn">import</span> <span class="n">Optional</span><span class="p">,</span> <span class="n">Tuple</span>
 
 <span class="kn">import</span> <span class="nn">pygame</span>
 <span class="kn">import</span> <span class="nn">tcod</span>
@@ -262,6 +263,7 @@
 
 <span class="kn">from</span> <span class="nn">scripts.engine.core</span> <span class="kn">import</span> <span class="n">chronicle</span><span class="p">,</span> <span class="n">query</span><span class="p">,</span> <span class="n">world</span>
 <span class="kn">from</span> <span class="nn">scripts.engine.core.component</span> <span class="kn">import</span> <span class="p">(</span>
+    <span class="n">Aesthetic</span><span class="p">,</span>
     <span class="n">Afflictions</span><span class="p">,</span>
     <span class="n">FOV</span><span class="p">,</span>
     <span class="n">Immunities</span><span class="p">,</span>
@@ -284,6 +286,8 @@
     <span class="n">MAX_ACTIVATION_DISTANCE</span><span class="p">,</span>
     <span class="n">ReactionTrigger</span><span class="p">,</span>
     <span class="n">ReactionTriggerType</span><span class="p">,</span>
+    <span class="n">SpriteCategory</span><span class="p">,</span>
+    <span class="n">SpriteCategoryType</span><span class="p">,</span>
 <span class="p">)</span>
 <span class="kn">from</span> <span class="nn">scripts.engine.internal.definition</span> <span class="kn">import</span> <span class="n">EffectData</span><span class="p">,</span> <span class="n">ReactionData</span>
 <span class="kn">from</span> <span class="nn">scripts.engine.internal.event</span> <span class="kn">import</span> <span class="p">(</span>
@@ -295,6 +299,7 @@
     <span class="n">event_hub</span><span class="p">,</span>
     <span class="n">MoveEvent</span><span class="p">,</span>
     <span class="n">Subscriber</span><span class="p">,</span>
+    <span class="n">UseSkillEvent</span><span class="p">,</span>
     <span class="n">WinConditionMetEvent</span><span class="p">,</span>
 <span class="p">)</span>
 <span class="kn">from</span> <span class="nn">scripts.engine.world_objects.tile</span> <span class="kn">import</span> <span class="n">Tile</span>
@@ -527,13 +532,25 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">subscribe</span><span class="p">(</span><span class="n">EventType</span><span class="o">.</span><span class="n">INTERACTION</span><span class="p">)</span></div>
 
 <div class="viewcode-block" id="InteractionEventSubscriber.process_event"><a class="viewcode-back" href="../../../../scripts.engine.core.html#scripts.engine.core.system.InteractionEventSubscriber.process_event">[docs]</a>    <span class="k">def</span> <span class="nf">process_event</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">event</span><span class="p">):</span>
-        <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">event</span><span class="p">,</span> <span class="n">MoveEvent</span><span class="p">):</span>
+
+        <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">event</span><span class="p">,</span> <span class="n">UseSkillEvent</span><span class="p">):</span>
+            <span class="c1"># hacky way to prevent Move causing attack animation to play</span>
+            <span class="k">if</span> <span class="n">event</span><span class="o">.</span><span class="n">skill_name</span> <span class="o">!=</span> <span class="s2">"Move"</span><span class="p">:</span>
+                <span class="n">_set_sprite</span><span class="p">(</span><span class="n">event</span><span class="o">.</span><span class="n">origin</span><span class="p">,</span> <span class="n">SpriteCategory</span><span class="o">.</span><span class="n">ATTACK</span><span class="p">)</span>
+
+        <span class="k">elif</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">event</span><span class="p">,</span> <span class="n">MoveEvent</span><span class="p">):</span>
             <span class="n">_handle_proximity_reaction_trigger</span><span class="p">(</span><span class="n">event</span><span class="p">)</span>
             <span class="n">_process_win_condition</span><span class="p">(</span><span class="n">event</span><span class="p">)</span>
             <span class="n">_process_map_condition</span><span class="p">(</span><span class="n">event</span><span class="p">)</span>
 
             <span class="n">_handle_reaction_trigger</span><span class="p">(</span><span class="n">event</span><span class="o">.</span><span class="n">origin</span><span class="p">,</span> <span class="n">ReactionTrigger</span><span class="o">.</span><span class="n">MOVE</span><span class="p">)</span>
             <span class="n">_handle_reaction_trigger</span><span class="p">(</span><span class="n">event</span><span class="o">.</span><span class="n">target</span><span class="p">,</span> <span class="n">ReactionTrigger</span><span class="o">.</span><span class="n">MOVED</span><span class="p">)</span>
+
+            <span class="c1"># is it a move other or a move self?</span>
+            <span class="k">if</span> <span class="n">event</span><span class="o">.</span><span class="n">target</span> <span class="o">==</span> <span class="n">event</span><span class="o">.</span><span class="n">origin</span><span class="p">:</span>
+                <span class="n">_set_sprite</span><span class="p">(</span><span class="n">event</span><span class="o">.</span><span class="n">target</span><span class="p">,</span> <span class="n">SpriteCategory</span><span class="o">.</span><span class="n">MOVE</span><span class="p">,</span> <span class="n">event</span><span class="o">.</span><span class="n">new_pos</span><span class="p">)</span>
+            <span class="k">else</span><span class="p">:</span>
+                <span class="n">_set_sprite</span><span class="p">(</span><span class="n">event</span><span class="o">.</span><span class="n">target</span><span class="p">,</span> <span class="n">SpriteCategory</span><span class="o">.</span><span class="n">HIT</span><span class="p">)</span>
 
         <span class="k">elif</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">event</span><span class="p">,</span> <span class="n">DamageEvent</span><span class="p">):</span>
             <span class="n">_handle_reaction_trigger</span><span class="p">(</span><span class="n">event</span><span class="o">.</span><span class="n">origin</span><span class="p">,</span> <span class="n">ReactionTrigger</span><span class="o">.</span><span class="n">DEAL_DAMAGE</span><span class="p">)</span>
@@ -543,17 +560,28 @@
                 <span class="n">_handle_reaction_trigger</span><span class="p">(</span><span class="n">event</span><span class="o">.</span><span class="n">origin</span><span class="p">,</span> <span class="n">ReactionTrigger</span><span class="o">.</span><span class="n">KILL</span><span class="p">)</span>
                 <span class="n">_handle_reaction_trigger</span><span class="p">(</span><span class="n">event</span><span class="o">.</span><span class="n">target</span><span class="p">,</span> <span class="n">ReactionTrigger</span><span class="o">.</span><span class="n">DIE</span><span class="p">)</span>
 
+                <span class="n">_set_sprite</span><span class="p">(</span><span class="n">event</span><span class="o">.</span><span class="n">target</span><span class="p">,</span> <span class="n">SpriteCategory</span><span class="o">.</span><span class="n">DEAD</span><span class="p">)</span>
+
+            <span class="k">else</span><span class="p">:</span>
+                <span class="n">_set_sprite</span><span class="p">(</span><span class="n">event</span><span class="o">.</span><span class="n">target</span><span class="p">,</span> <span class="n">SpriteCategory</span><span class="o">.</span><span class="n">HIT</span><span class="p">)</span>
+
         <span class="k">elif</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">event</span><span class="p">,</span> <span class="n">AffectStatEvent</span><span class="p">):</span>
             <span class="n">_handle_reaction_trigger</span><span class="p">(</span><span class="n">event</span><span class="o">.</span><span class="n">origin</span><span class="p">,</span> <span class="n">ReactionTrigger</span><span class="o">.</span><span class="n">CAUSED_AFFECT_STAT</span><span class="p">)</span>
             <span class="n">_handle_reaction_trigger</span><span class="p">(</span><span class="n">event</span><span class="o">.</span><span class="n">target</span><span class="p">,</span> <span class="n">ReactionTrigger</span><span class="o">.</span><span class="n">STAT_AFFECTED</span><span class="p">)</span>
+
+            <span class="n">_set_sprite</span><span class="p">(</span><span class="n">event</span><span class="o">.</span><span class="n">target</span><span class="p">,</span> <span class="n">SpriteCategory</span><span class="o">.</span><span class="n">HIT</span><span class="p">)</span>
 
         <span class="k">elif</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">event</span><span class="p">,</span> <span class="n">AffectCooldownEvent</span><span class="p">):</span>
             <span class="n">_handle_reaction_trigger</span><span class="p">(</span><span class="n">event</span><span class="o">.</span><span class="n">origin</span><span class="p">,</span> <span class="n">ReactionTrigger</span><span class="o">.</span><span class="n">CAUSED_AFFECT_COOLDOWN</span><span class="p">)</span>
             <span class="n">_handle_reaction_trigger</span><span class="p">(</span><span class="n">event</span><span class="o">.</span><span class="n">target</span><span class="p">,</span> <span class="n">ReactionTrigger</span><span class="o">.</span><span class="n">COOLDOWN_AFFECTED</span><span class="p">)</span>
 
+            <span class="n">_set_sprite</span><span class="p">(</span><span class="n">event</span><span class="o">.</span><span class="n">target</span><span class="p">,</span> <span class="n">SpriteCategory</span><span class="o">.</span><span class="n">HIT</span><span class="p">)</span>
+
         <span class="k">elif</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">event</span><span class="p">,</span> <span class="n">AfflictionEvent</span><span class="p">):</span>
             <span class="n">_handle_reaction_trigger</span><span class="p">(</span><span class="n">event</span><span class="o">.</span><span class="n">origin</span><span class="p">,</span> <span class="n">ReactionTrigger</span><span class="o">.</span><span class="n">CAUSED_AFFLICTION</span><span class="p">)</span>
-            <span class="n">_handle_reaction_trigger</span><span class="p">(</span><span class="n">event</span><span class="o">.</span><span class="n">target</span><span class="p">,</span> <span class="n">ReactionTrigger</span><span class="o">.</span><span class="n">AFFLICTED</span><span class="p">)</span></div></div>
+            <span class="n">_handle_reaction_trigger</span><span class="p">(</span><span class="n">event</span><span class="o">.</span><span class="n">target</span><span class="p">,</span> <span class="n">ReactionTrigger</span><span class="o">.</span><span class="n">AFFLICTED</span><span class="p">)</span>
+
+            <span class="n">_set_sprite</span><span class="p">(</span><span class="n">event</span><span class="o">.</span><span class="n">target</span><span class="p">,</span> <span class="n">SpriteCategory</span><span class="o">.</span><span class="n">HIT</span><span class="p">)</span></div></div>
 
 
 <span class="n">interaction_subscriber</span> <span class="o">=</span> <span class="n">InteractionEventSubscriber</span><span class="p">()</span>
@@ -671,6 +699,22 @@
 
         <span class="n">skill</span> <span class="o">=</span> <span class="n">store</span><span class="o">.</span><span class="n">skill_registry</span><span class="p">[</span><span class="n">data</span><span class="o">.</span><span class="n">reaction</span><span class="p">]</span>
         <span class="n">world</span><span class="o">.</span><span class="n">use_skill</span><span class="p">(</span><span class="n">observer</span><span class="p">,</span> <span class="n">skill</span><span class="p">,</span> <span class="n">target_tile</span><span class="p">,</span> <span class="n">Direction</span><span class="o">.</span><span class="n">CENTRE</span><span class="p">)</span>
+
+
+<span class="k">def</span> <span class="nf">_set_sprite</span><span class="p">(</span><span class="n">entity</span><span class="p">:</span> <span class="n">EntityID</span><span class="p">,</span> <span class="n">sprite_category</span><span class="p">:</span> <span class="n">SpriteCategoryType</span><span class="p">,</span> <span class="n">new_pos</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="n">Tuple</span><span class="p">[</span><span class="nb">int</span><span class="p">,</span> <span class="nb">int</span><span class="p">]]</span> <span class="o">=</span> <span class="kc">None</span><span class="p">):</span>
+    <span class="sd">"""</span>
+<span class="sd">    Sets an entities sprite</span>
+<span class="sd">    """</span>
+    <span class="k">if</span> <span class="n">world</span><span class="o">.</span><span class="n">entity_has_component</span><span class="p">(</span><span class="n">entity</span><span class="p">,</span> <span class="n">Aesthetic</span><span class="p">):</span>
+        <span class="n">aesthetic</span> <span class="o">=</span> <span class="n">world</span><span class="o">.</span><span class="n">get_entitys_component</span><span class="p">(</span><span class="n">entity</span><span class="p">,</span> <span class="n">Aesthetic</span><span class="p">)</span>
+        <span class="n">animation</span> <span class="o">=</span> <span class="nb">getattr</span><span class="p">(</span><span class="n">aesthetic</span><span class="o">.</span><span class="n">sprites</span><span class="p">,</span> <span class="n">sprite_category</span><span class="p">)</span>
+        <span class="k">if</span> <span class="n">animation</span><span class="p">:</span>
+            <span class="n">aesthetic</span><span class="o">.</span><span class="n">set_current_sprite</span><span class="p">(</span><span class="n">sprite_category</span><span class="p">)</span>
+        <span class="k">else</span><span class="p">:</span>
+            <span class="n">logging</span><span class="o">.</span><span class="n">warning</span><span class="p">(</span><span class="sa">f</span><span class="s2">"</span><span class="si">{</span><span class="n">world</span><span class="o">.</span><span class="n">get_name</span><span class="p">(</span><span class="n">entity</span><span class="p">)</span><span class="si">}</span><span class="s2"> doesn`t have </span><span class="si">{</span><span class="n">sprite_category</span><span class="si">}</span><span class="s2"> sprite so left as idle."</span><span class="p">)</span>
+
+        <span class="k">if</span> <span class="n">new_pos</span><span class="p">:</span>
+            <span class="n">aesthetic</span><span class="o">.</span><span class="n">target_draw_x</span><span class="p">,</span> <span class="n">aesthetic</span><span class="o">.</span><span class="n">target_draw_y</span> <span class="o">=</span> <span class="n">new_pos</span>
 
 
 <span class="c1">############### NON-GENERIC REACTION HANDLING ##########################</span>
