--- a/_modules/scripts/engine/internal/constant.html
+++ b/_modules/scripts/engine/internal/constant.html
@@ -265,7 +265,7 @@
 
 <span class="c1">######################## TOP LEVEL CONSTANTS ######################################</span>
 
-<span class="n">VERSION</span> <span class="o">=</span> <span class="s2">"0.155.0"</span>  <span class="c1"># DONT FORGET TO UPDATE SPHINX VERSION</span>
+<span class="n">VERSION</span> <span class="o">=</span> <span class="s2">"0.157.0"</span>  <span class="c1"># DONT FORGET TO UPDATE SPHINX VERSION</span>
 <span class="n">DEBUG_START</span> <span class="o">=</span> <span class="kc">False</span>  <span class="c1"># Whether to start directly in debug map</span>
 
 <span class="n">MAX_SKILLS</span> <span class="o">=</span> <span class="mi">6</span>
@@ -318,6 +318,7 @@
 <span class="n">ReactionTriggerType</span> <span class="o">=</span> <span class="n">NewType</span><span class="p">(</span><span class="s2">"ReactionTriggerType"</span><span class="p">,</span> <span class="nb">str</span><span class="p">)</span>
 <span class="n">TileCategoryType</span> <span class="o">=</span> <span class="n">NewType</span><span class="p">(</span><span class="s2">"TileCategoryType"</span><span class="p">,</span> <span class="nb">str</span><span class="p">)</span>
 <span class="n">HeightType</span> <span class="o">=</span> <span class="n">NewType</span><span class="p">(</span><span class="s2">"HeightType"</span><span class="p">,</span> <span class="nb">int</span><span class="p">)</span>
+<span class="n">SpriteCategoryType</span> <span class="o">=</span> <span class="n">NewType</span><span class="p">(</span><span class="s2">"SpriteCategoryType"</span><span class="p">,</span> <span class="nb">str</span><span class="p">)</span>
 
 
 <span class="c1">#################### INTERNAL, NON-SERIALISED ###########################################</span>
@@ -678,6 +679,15 @@
     <span class="n">MIDDLING</span> <span class="o">=</span> <span class="n">HeightType</span><span class="p">(</span><span class="mi">3</span><span class="p">)</span>
     <span class="n">LOFTY</span> <span class="o">=</span> <span class="n">HeightType</span><span class="p">(</span><span class="mi">4</span><span class="p">)</span>
     <span class="n">MAX</span> <span class="o">=</span> <span class="n">HeightType</span><span class="p">(</span><span class="mi">5</span><span class="p">)</span></div>
+
+
+<div class="viewcode-block" id="SpriteCategory"><a class="viewcode-back" href="../../../../scripts.engine.internal.html#scripts.engine.internal.constant.SpriteCategory">[docs]</a><span class="k">class</span> <span class="nc">SpriteCategory</span><span class="p">(</span><span class="n">SimpleNamespace</span><span class="p">):</span>
+    <span class="n">ICON</span> <span class="o">=</span> <span class="n">SpriteCategoryType</span><span class="p">(</span><span class="s2">"icon"</span><span class="p">)</span>
+    <span class="n">IDLE</span> <span class="o">=</span> <span class="n">SpriteCategoryType</span><span class="p">(</span><span class="s2">"idle"</span><span class="p">)</span>
+    <span class="n">ATTACK</span> <span class="o">=</span> <span class="n">SpriteCategoryType</span><span class="p">(</span><span class="s2">"attack"</span><span class="p">)</span>
+    <span class="n">HIT</span> <span class="o">=</span> <span class="n">SpriteCategoryType</span><span class="p">(</span><span class="s2">"hit"</span><span class="p">)</span>
+    <span class="n">DEAD</span> <span class="o">=</span> <span class="n">SpriteCategoryType</span><span class="p">(</span><span class="s2">"dead"</span><span class="p">)</span>
+    <span class="n">MOVE</span> <span class="o">=</span> <span class="n">SpriteCategoryType</span><span class="p">(</span><span class="s2">"move"</span><span class="p">)</span></div>
 </pre></div>
 
           </article>
