--- a/_modules/scripts/nqp/actions/skill.html
+++ b/_modules/scripts/nqp/actions/skill.html
@@ -260,7 +260,7 @@
 <span class="kn">from</span> <span class="nn">snecs.typedefs</span> <span class="kn">import</span> <span class="n">EntityID</span>
 
 <span class="kn">from</span> <span class="nn">scripts.engine.core</span> <span class="kn">import</span> <span class="n">world</span>
-<span class="kn">from</span> <span class="nn">scripts.engine.core.component</span> <span class="kn">import</span> <span class="n">Aesthetic</span><span class="p">,</span> <span class="n">Position</span>
+<span class="kn">from</span> <span class="nn">scripts.engine.core.component</span> <span class="kn">import</span> <span class="n">Position</span>
 <span class="kn">from</span> <span class="nn">scripts.engine.core.effect</span> <span class="kn">import</span> <span class="n">AffectCooldownEffect</span><span class="p">,</span> <span class="n">ApplyAfflictionEffect</span><span class="p">,</span> <span class="n">DamageEffect</span><span class="p">,</span> <span class="n">Effect</span><span class="p">,</span> <span class="n">MoveSelfEffect</span>
 <span class="kn">from</span> <span class="nn">scripts.engine.internal</span> <span class="kn">import</span> <span class="n">library</span>
 <span class="kn">from</span> <span class="nn">scripts.engine.internal.action</span> <span class="kn">import</span> <span class="n">Skill</span>
@@ -278,7 +278,7 @@
 
 <div class="viewcode-block" id="Move.__init__"><a class="viewcode-back" href="../../../../scripts.nqp.actions.html#scripts.nqp.actions.skill.Move.__init__">[docs]</a>    <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">user</span><span class="p">:</span> <span class="n">EntityID</span><span class="p">,</span> <span class="n">target_tile</span><span class="p">:</span> <span class="n">Tile</span><span class="p">,</span> <span class="n">direction</span><span class="p">):</span>
         <span class="sd">"""</span>
-<span class="sd">        Only Move needs an init as it overrides the target tile</span>
+<span class="sd">        Move needs an init as it overrides the target tile</span>
 <span class="sd">        """</span>
 
         <span class="c1"># override target</span>
@@ -300,11 +300,7 @@
             <span class="n">move_amount</span><span class="o">=</span><span class="mi">1</span><span class="p">,</span>
         <span class="p">)</span>
 
-        <span class="k">return</span> <span class="p">[</span><span class="n">move_effect</span><span class="p">]</span></div>
-
-<div class="viewcode-block" id="Move.get_animation"><a class="viewcode-back" href="../../../../scripts.nqp.actions.html#scripts.nqp.actions.skill.Move.get_animation">[docs]</a>    <span class="k">def</span> <span class="nf">get_animation</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">aesthetic</span><span class="p">:</span> <span class="n">Aesthetic</span><span class="p">):</span>
-        <span class="c1"># this special case is handled in the MoveActorEffect</span>
-        <span class="k">return</span> <span class="kc">None</span></div></div>
+        <span class="k">return</span> <span class="p">[</span><span class="n">move_effect</span><span class="p">]</span></div></div>
 
 
 <div class="viewcode-block" id="BasicAttack"><a class="viewcode-back" href="../../../../scripts.nqp.actions.html#scripts.nqp.actions.skill.BasicAttack">[docs]</a><span class="k">class</span> <span class="nc">BasicAttack</span><span class="p">(</span><span class="n">Skill</span><span class="p">):</span>
