--- a/_modules/scripts/engine/core/dungen.html
+++ b/_modules/scripts/engine/core/dungen.html
@@ -673,7 +673,9 @@
 <span class="c1">############################ GENERATE MAP ############################</span>
 
 
-<div class="viewcode-block" id="generate"><a class="viewcode-back" href="../../../../scripts.engine.core.html#scripts.engine.core.dungen.generate">[docs]</a><span class="k">def</span> <span class="nf">generate</span><span class="p">(</span><span class="n">map_name</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span> <span class="n">rng</span><span class="p">:</span> <span class="n">random</span><span class="o">.</span><span class="n">Random</span><span class="p">,</span> <span class="n">player_data</span><span class="p">:</span> <span class="n">ActorData</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">Tuple</span><span class="p">[</span><span class="n">List</span><span class="p">[</span><span class="n">List</span><span class="p">[</span><span class="n">Tile</span><span class="p">]],</span> <span class="nb">str</span><span class="p">]:</span>
+<div class="viewcode-block" id="generate"><a class="viewcode-back" href="../../../../scripts.engine.core.html#scripts.engine.core.dungen.generate">[docs]</a><span class="k">def</span> <span class="nf">generate</span><span class="p">(</span>
+    <span class="n">map_name</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span> <span class="n">rng</span><span class="p">:</span> <span class="n">random</span><span class="o">.</span><span class="n">Random</span><span class="p">,</span> <span class="n">player_data</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="n">ActorData</span><span class="p">]</span> <span class="o">=</span> <span class="kc">None</span>
+<span class="p">)</span> <span class="o">-&gt;</span> <span class="n">Tuple</span><span class="p">[</span><span class="n">List</span><span class="p">[</span><span class="n">List</span><span class="p">[</span><span class="n">Tile</span><span class="p">]],</span> <span class="nb">str</span><span class="p">]:</span>
     <span class="sd">"""</span>
 <span class="sd">    Generate the map using the specified details.</span>
 <span class="sd">    """</span>
@@ -810,7 +812,7 @@
     <span class="n">rooms</span> <span class="o">=</span> <span class="n">dungen</span><span class="o">.</span><span class="n">placed_rooms</span>
     <span class="n">dungen</span><span class="o">.</span><span class="n">rng</span><span class="o">.</span><span class="n">shuffle</span><span class="p">(</span><span class="n">rooms</span><span class="p">)</span>
 
-    <span class="c1"># we might not have player data if we are viewing generations</span>
+    <span class="c1"># we might not have player data if we are viewing the generated maps</span>
     <span class="k">if</span> <span class="n">player_data</span><span class="p">:</span>
         <span class="c1"># put player in first room</span>
         <span class="n">player_room</span> <span class="o">=</span> <span class="n">rooms</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span>
