--- a/_modules/scripts/engine/world_objects/game_map.html
+++ b/_modules/scripts/engine/world_objects/game_map.html
@@ -257,7 +257,7 @@
 <span class="kn">import</span> <span class="nn">json</span>
 <span class="kn">import</span> <span class="nn">logging</span>
 <span class="kn">import</span> <span class="nn">random</span>
-<span class="kn">from</span> <span class="nn">typing</span> <span class="kn">import</span> <span class="n">Any</span><span class="p">,</span> <span class="n">Dict</span><span class="p">,</span> <span class="n">List</span>
+<span class="kn">from</span> <span class="nn">typing</span> <span class="kn">import</span> <span class="n">Any</span><span class="p">,</span> <span class="n">Dict</span><span class="p">,</span> <span class="n">List</span><span class="p">,</span> <span class="n">Optional</span>
 
 <span class="kn">import</span> <span class="nn">numpy</span> <span class="k">as</span> <span class="nn">np</span>
 <span class="kn">from</span> <span class="nn">pygame.constants</span> <span class="kn">import</span> <span class="n">BLEND_RGBA_MULT</span>
@@ -333,7 +333,7 @@
 
     <span class="c1">################## MAP GEN #############################################</span>
 
-<div class="viewcode-block" id="GameMap.generate_new_map"><a class="viewcode-back" href="../../../../scripts.engine.world_objects.html#scripts.engine.world_objects.game_map.GameMap.generate_new_map">[docs]</a>    <span class="k">def</span> <span class="nf">generate_new_map</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">player_data</span><span class="p">:</span> <span class="n">ActorData</span><span class="p">):</span>
+<div class="viewcode-block" id="GameMap.generate_new_map"><a class="viewcode-back" href="../../../../scripts.engine.world_objects.html#scripts.engine.world_objects.game_map.GameMap.generate_new_map">[docs]</a>    <span class="k">def</span> <span class="nf">generate_new_map</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">player_data</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="n">ActorData</span><span class="p">]</span> <span class="o">=</span> <span class="kc">None</span><span class="p">):</span>
         <span class="sd">"""</span>
 <span class="sd">        Generate the map for the current game map. Creates tiles. Saves the values directly to the GameMap.</span>
 <span class="sd">        """</span>
